컨테이너 이름 변경

--- a/buildspec/buildspec-prod.yml
+++ b/buildspec/buildspec-prod.yml
@@ -15,6 +15,6 @@ phases:
       - docker tag terry-nest-prod:latest 647180380627.dkr.ecr.ap-northeast-2.amazonaws.com/terry-nest-prod:latest
       - echo Writing image definitions file...
       - docker push 647180380627.dkr.ecr.ap-northeast-2.amazonaws.com/terry-nest-prod:latest
-      - printf '[{"name":"nestjs-container-prod","imageUri":"%s"}]' 647180380627.dkr.ecr.ap-northeast-2.amazonaws.com/terry-nest-prod:latest > imagedefinitions.json
+      - printf '[{"name":"nest","imageUri":"%s"}]' 647180380627.dkr.ecr.ap-northeast-2.amazonaws.com/terry-nest-prod:latest > imagedefinitions.json
 artifacts:
   files: imagedefinitions.json
